# model-chat

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: __init__.py  app.py  commands.py  completers.py  render.py
config/: base_prompt.txt  mcp.yaml  models.yaml  policy.yaml
config/personas/: coder.txt  general.txt  reviewer.txt  shell.txt  translator.txt  tutor.txt  writer.txt
core/: __init__.py  agent.py  budget.py  client.py  mcp_adapter.py  mcp_client.py  mcp_config.py  mcp_setup.py  memory.py  models.py  personas.py  policy.py  safety.py  store.py  tools.py  usage.py
docs/superpowers/plans/: 2026-05-03-model-chat-plan.md  2026-05-03-model-chat-v2-plan.md
docs/superpowers/specs/: 2026-05-03-model-chat-design.md
scripts/: quality-check.ps1  quality-check.sh
tests/: mock_mcp_server.py  test_agent.py  test_app.py  test_budget.py  test_client.py  test_commands.py  test_completers.py  test_mcp_adapter.py  test_mcp_client.py  test_mcp_config.py  test_mcp_integration.py  test_mcp_policy.py  test_mcp_setup.py  test_memory.py  test_models.py  test_personas.py  test_policy.py  test_render.py  test_security.py  test_server.py  test_store.py  test_tools.py  test_usage.py
web/: __init__.py
web/backend/: __init__.py  server.py
web/frontend/: eslint.config.js  package-lock.json  package.json  svelte.config.js
web/frontend/src/: app.css  app.html  service-worker.ts
web/frontend/src/lib/: Chat.svelte  PermissionPrompt.svelte  Sidebar.svelte  ToolCallBlock.svelte  TopBar.svelte  api.ts
web/frontend/src/routes/: +page.svelte
web/frontend/static/: manifest.json
web/static/: index.html
web/static/_app/: version.json
web/static/_app/immutable/assets/: 0.B3AlEk36.css  0.Cvqzl9qt.css  0.DYjvHc1A.css
web/static/_app/immutable/chunks/: 4kW3xU_A.js  BlaT74C8.js  By07HFJG.js  HHmDTzLW.js  _pzZ1Azt.js
web/static/_app/immutable/entry/: app.BD4mJBab.js  app.Cx3R0j2G.js  app.QEW87_Kb.js  start.BWJ2SmDi.js  start.CA4cjSFY.js  start.xXx19WZL.js
web/static/_app/immutable/nodes/: 0.CiDg4rNY.js  0.DQ6SpBBS.js  1.B9zLDbsf.js  1.IHxEBCJA.js  1.n9p70rht.js  2.8XELAjn3.js  2.B-kOCGOb.js  2.CCgkFuVt.js
