[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-chat"
version = "1.0.0"
description = "Chat with any LLM via OpenRouter — CLI and web UI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=1.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
mchat = "cli.app:main"
mchat-web = "web.backend.server:main"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "web*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt"]
