[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-chat"
version = "1.0.0"
description = "Chat with any LLM via OpenRouter — CLI and web UI"
readme = "README.md"
license = "MIT"
authors = [{name = "exvsynz"}]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "sse-starlette>=1.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.11",
    "mypy>=1.15",
    "pre-commit>=4.2",
]

[project.scripts]
mchat = "cli.app:main"
mchat-web = "web.backend.server:main"

[tool.setuptools.packages.find]
include = ["core*", "cli*", "web*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".claude", "web/frontend", "web/static"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"cli/app.py" = ["E402"]
"web/backend/server.py" = ["E402"]
"tests/*" = ["SIM117"]

[tool.ruff.lint.isort]
known-first-party = ["core", "cli", "web"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
